[gd_scene load_steps=15 format=2]

[ext_resource path="res://overlap/Hurtbox.tscn" type="PackedScene" id=1]
[ext_resource path="res://overlap/Hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://units/monsters/monster001/monster001.png" type="Texture" id=3]
[ext_resource path="res://units/monsters/Enemy.gd" type="Script" id=4]
[ext_resource path="res://pickups/gold/Gold.tscn" type="PackedScene" id=5]
[ext_resource path="res://units/monsters/running_movement_behaviour.gd" type="Script" id=6]
[ext_resource path="res://units/HitEffect.tres" type="Material" id=7]
[ext_resource path="res://visual_effects/floating_text/floating_text.tscn" type="PackedScene" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 8.06226

[sub_resource type="CircleShape2D" id=6]
resource_local_to_scene = true
radius = 124.548

[sub_resource type="CircleShape2D" id=5]
resource_local_to_scene = true
radius = 9.0

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:material:shader_param/dissolveState")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "running_left"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 11, 10, 9, 8, 7, 6 ]
}

[sub_resource type="Animation" id=4]
resource_name = "running_right"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[node name="Enemy" type="KinematicBody2D" groups=["enemy"]]
position = Vector2( 298, 112 )
collision_layer = 4
collision_mask = 22
script = ExtResource( 4 )
floating_text = ExtResource( 8 )
gold_scene = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 7 )
texture = ExtResource( 3 )
hframes = 12

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -2 )
shape = SubResource( 1 )

[node name="Hurtbox" parent="." instance=ExtResource( 1 )]
visible = false
position = Vector2( 0, -2 )
collision_layer = 4

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
shape = SubResource( 6 )

[node name="Hitbox" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, -2 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 5 )

[node name="MovementBehaviour" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="MovementBehaviour"]
root_node = NodePath("../..")
anims/RESET = SubResource( 2 )
anims/running_left = SubResource( 3 )
anims/running_right = SubResource( 4 )

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.1

[connection signal="hurt" from="Hurtbox" to="." method="_on_Hurtbox_hurt"]
[connection signal="timeout" from="HitTimer" to="." method="_on_HitTimer_timeout"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
